# DocuMind

./: .env.example  .gitignore  Makefile  README.md  _.txt  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: deps.py  main.py  schemas.py  sse.py
apps/api/app/routers/: chat.py  documents.py  health.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx
apps/web/app/chat/: page.tsx
apps/web/components/chat/: agent-timeline.tsx  assistant-message.tsx  chat-input.tsx  message-thread.tsx  sources-panel.tsx  types.ts  use-chat.ts  user-message.tsx
apps/web/components/citations/: citation-drawer.tsx  citation-link.tsx  cited-text.tsx  parse-citations.ts
apps/web/components/documents/: document-card.tsx  document-delete-dialog.tsx  document-grid.tsx  document-status-badge.tsx
apps/web/components/layout/: mobile-nav.tsx  sidebar.tsx  status-indicator.tsx  theme-toggle.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  sheet.tsx  sonner.tsx
apps/web/components/upload/: dropzone.tsx  ingest-stepper.tsx  upload-progress-card.tsx  upload-progress-list.tsx  use-document-uploads.ts
apps/web/lib/: api.ts  file-type.ts  nav.ts  parse-source-ref.ts  sse.ts  types.ts
docs/: question-flow-diagram.html
evaluation/: llm_judge.py  metrics.py  ragas_metrics.py  reporting.py  retrieval_eval.py  run_eval.py
evaluation/datasets/: README.md  qa_pairs.jsonl
evaluation/datasets/corpus/: account-security.md  refund-policy.md  shipping-info.md  warranty-terms.md
frontend/web/app/: globals.css
frontend/web/components/layout/: app-shell.tsx
frontend/web/components/ui/: badge.tsx  drawer.tsx  tabs.tsx
frontend/web/lib/: api.ts  utils.ts
scripts/: pull_models.sh  seed_docs.py
