[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "documind-api"
version = "0.1.0"
description = "FastAPI backend for the Documind monorepo"
requires-python = ">=3.11"
dependencies = [
    "documind_core",
    "fastapi >= 0.138",
    "uvicorn[standard]>= 0.30",
    "python-multipart>= 0.0.9",
    "aiofiles >= 23.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]