# Declares the tools needed to build this package and how to invoke them.
[build-system]
requires = ["setuptools>=72", "wheel"]  # setuptools does the packaging, wheel produces the binary distribution format
build-backend = "setuptools.backends.legacy:build"  # tells pip/build which backend entry point builds this package

# Metadata and dependencies for the installable "documind-api" package itself.
[project]
name = "documind-api"  # package name used by pip/uv when installing this app
version = "0.1.0"  # current package version
description = "FastAPI backend for the Documind monorepo"  # human-readable summary shown in package indexes/tools
requires-python = ">=3.11"  # minimum Python version this app is written/tested against
dependencies = [
    "documind-core",  # local shared package (models, agent, chunking) this API service builds on
    "fastapi>=0.138",  # web framework used to define the HTTP/SSE routes
    "uvicorn[standard]>=0.30",  # ASGI server that actually runs the FastAPI app
    "python-multipart>=0.0.9",  # required by FastAPI to parse multipart/form-data (file uploads)
    "aiofiles>=23.0",  # async file I/O, needed for non-blocking document ingestion
    "httpx>=0.27",  # async HTTP client, e.g. for calling out to other services
]

# Extra dependency groups installed only when explicitly requested (e.g. `pip install .[dev]`).
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]  # test runner, async test support, and client for testing endpoints

# Tells setuptools where to find the Python packages to include in the build.
[tool.setuptools.packages.find]
where = ["."]  # search for packages starting at this directory (apps/api)
include = ["app*"]  # only include packages whose name starts with "app" (i.e. the app/ package)
